crates/ur-macros/tests/ui/bad_return_shape.rs
use ur_macros::tool;

#[tool]
async fn make() -> impl std::fmt::Debug {
    1_i64
}

fn main() {}
